@@ -6,6 +6,9 @@ PHP                                                                        NEWS
   . Fixed bug #67325 (imagetruecolortopalette: white is duplicated in palette).
     (cmb)
 
+- Mbstring:
+  . Fixed bug #72994 (mbc_to_code() out of bounds read). (Laruence, cmb)
+
 15 Sep 2016, PHP 5.6.26
 
 - Core:
